--- a/package.json
+++ b/package.json
@@ -1,29 +1,56 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "golden-health-and-fitness-blog",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Em Dee",
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@hot-loader/react-dom": "^16.14.0",
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
     "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.26.1",
+    "gatsby-cli": "^3.2.0",
     "gatsby-image": "^2.5.0",
+    "gatsby-plugin-google-analytics": "^3.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-load-script": "^1.1.0",
+    "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-offline": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
+    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-social9-comment": "^1.0.3",
+    "gatsby-plugin-social9-socialshare": "^1.0.4",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-remark-images": "^3.6.0",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^2.6.0",
-    "gatsby-transformer-sharp": "^2.6.0",
+    "gatsby-transformer-remark": "^2.13.0",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-transformer-yaml": "^3.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-burger-menu": "^3.0.6",
+    "react-dom": "^16.14.0",
+    "react-hamburger-menu": "^1.2.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-share": "^4.3.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
+    "share": "^0.7.40",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
